Historia Usuario #2 Lista

--- a/FormuSalud/FormuSalud.csproj
+++ b/FormuSalud/FormuSalud.csproj
@@ -91,6 +91,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Restablecer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Restablecer.Designer.cs">
+      <DependentUpon>Restablecer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Usuario.cs" />
     <EmbeddedResource Include="CrearCuenta.resx">
       <DependentUpon>CrearCuenta.cs</DependentUpon>
@@ -114,6 +120,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Restablecer.resx">
+      <DependentUpon>Restablecer.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
